--- a/projectback/package.json
+++ b/projectback/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   },
   "devDependencies": {
